# ai-benchmark-megapolis

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_models.py  run_full_benchmark.py
data/: etalon_ground_truth.json  etalon_tasks.json  sample_ground_truth.json  sample_tasks.json
src/: __init__.py  __main__.py  cli.py  config.py  llm_client.py  metrics.py  prompts.py  runner.py
