[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-benchmark"
version = "1.0.0"
description = "Бенчмарк для тестирования LLM моделей на задаче планирования строительных работ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
ai-benchmark = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
